--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,45 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.input {
+  background-color: white;
+  width: 100%;
+  border-radius: 10px;
+  height: 2.5rem;
+  padding: 0 15px;
+  box-shadow: 0px 0px 8px #ddd;
+  display: flex;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.add-btn {
+  transition: background-color 0.3s ease;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.add-btn:hover {
+  border: #000000 2px solid;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+textarea {
+  background-color: transparent;
+  border: none;
+  height: 100%;
+  min-height: 7rem;
+  font-size: 1.25rem;
+  width: 100%;
+}
+
+textarea:focus {
+  outline: none;
+}
+
+input {
+  background-color: transparent;
+  border: none;
+  height: 100%;
+  font-size: 1.25rem;
+  width: 100%;
+}
+
+input:focus {
+  outline: none;
 }
